# binjgb

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  appyveyor.yml  binjgb.c  binjgb.js  binjgb.wasm  common.py  demo.js  index.html  input.txt  main.c  roms.py  test_results.md  tester.c  tester.py
.github/workflows/: build.yml  build_release.yml
demo/: binjgb.js  binjgb.wasm  demo.html  demo.js  simple.js
docs/: LICENSE.gbstudio  binjgb.js  binjgb.wasm  demo.html  demo.js  idb.min.js  index.html  porklike.gb  sha1.js  simple.css  simple.html  simple.js
scripts/: anim.py  build_sdl2.py  build_tests.py  common.py  disasm.py  info.py  input_move_right.txt  ips.py  super_mario_land.input  test.json  tester.py  usage.py  verify.py
src/: binjgb.c  binjgb.h  builtin-palettes.def  common.c  common.h  debugger.c  debugger.cc  emulator-debug.c  emulator-debug.h  emulator.c  emulator.h  host-gl.c  host-gl.h  host-ui-imgui.cc  host-ui-simple.c  host-ui.h  host.c  host.h  joypad.c  joypad.h  memory.c  memory.h  options.c  options.h  rewind.c  rewind.h  tester.c
src/debugger/: audio-window.cc  debugger.cc  debugger.h  disassembly-window.cc  emulator-window.cc  imgui-helpers.h  io-window.cc  main.cc  map-window.cc  memory-window.cc  obj-window.cc  rewind-window.cc  rom-window.cc  tiledata-window.cc
src/emscripten/: binjgb.js  binjgb.wasm  demo.html  demo.js  exported.json  main.c  wrapper.c
test/: oam_count_v5.gb
